<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="signup"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:layout_below="@id/signup"
        android:hint="@string/first_name"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/family_name"
        android:layout_below="@id/first_name"
        android:hint="@string/family_name"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/family_name"
        android:hint="@string/email"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:layout_below="@id/password"
        android:hint="@string/age"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_below="@id/age"
        android:hint="@string/address"
        android:textColorHint="#000000"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginTop="25dp"
        android:backgroundTint="#000000"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up" />



</RelativeLayout>